<resources>
    <string name="app_name">Folks</string>

    <string name="tab_state">States</string>
    <string name="tab_congress">Congress</string>
    <string name="tab_local">Local</string>
    <string name="button_Federal">Select state (Federal)</string>

    <string name="subTitle_president">President</string>
    <string name="subTitle_vice_president">Vice President</string>
    <string name="cabinet">Cabinet</string>
    <string name="senate">Senate</string>
    <string name="congress">Congress</string>
    <string name="state_filter">filter by region (all)</string>
    <string name="filter_all">All</string>
    <string name="filter_text_start">(</string>
    <string name="filter_text_end">)</string>
    <string name="profile_email">Email:</string>
    <string name="profile_name">Name:</string>
    <string name="profile_age">Date of Birth:</string>
    <string name="profile_location_country">Country:</string>
    <string name="profile_location">Location</string>
    <string name="profile_location_city">City:</string>
    <string name="profile_location_address">Address:</string>
    <string name="profile_location_state">State:</string>
    <string name="profile_location_zip_code">ZIP code:</string>
    <string name="profile_title">Personal Information</string>
    <string name="following_title">Candidates:</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="NEWS_KEY">NEWS_SELECTED</string>
    <string name="vote_button">VOTE</string>
    <string name="tab_content">Content</string>
    <string name="tab_debate">Debate</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="coma_separator">,</string>
    <string name="locality_title">Enter address:</string>
    <string name="search">Search</string>


    <string name="republican_party">Rep</string>
    <string name="democratic_party">Dem</string>
    <string name="independent_party">Ind</string>


    <!--    Dialog-->
    <string name="filter_dialog_title">Select state</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_following">Following</string>
    <string name="tab_settings">Settings</string>

    <string name="snackbar_title">New stories added</string>
    <string name="snackbar_action">VIEW</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="detail_poster_description">This is the article poster picture</string>
    <string name="article_poster_description">Article poster</string>
    <string name="back_button_description">Return to previous screen button</string>
    <string name="logo_description">App logo image</string>
    <string name="share_button_description">share this article button</string>
    <string name="user_screen_button_description">user screen button</string>
    <string name="home_screen_button_description">home screen button</string>
    <string name="people_screen_button_description">people screen button</string>
    <string name="jump_to_top_button_description">jump to top button</string>
    <string name="information_button_description">information button</string>
    <string name="user_picture_description">user picture</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="date_of_birth_hint">year of birth</string>
    <string name="city_hint">city</string>
    <string name="state_hint">state</string>
    <string name="country_hint">country</string>
    <string name="zip_code_hint">zip code</string>
    <string name="president_picture_description">this is a picture of the president or the governor depending on the filter selected</string>
    <string name="vice_president_picture_description">this is a picture of the vice president or lieutenant governor depending on the filter selected</string>
    <string name="main_notification_channel_name">New Stories</string>
    <string name="new_stories_notification_title">FOLKS Stories</string>
    <string name="new_stories_notification_body">Check out these new stories</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_article_poster_description">Article poster</string>
    <string name="widget_previous_button_description">Previous article button</string>
    <string name="widget_next_button_description">Previous article button</string>
    <string name="widget_title">Check out these new stories</string>
    <string name="Button_rate_this_article">Rate this article</string>
    <string name="elections">Elections</string>
    <string name="article_content_link">Continue reading this article on </string>
    <string name="follow">follow</string>


</resources>
