<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_name_label" />

    <TextView
        android:id="@+id/profile_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_email_label" />

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="212dp"
        android:text="@string/profile_location"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_location_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_location_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_location" />

    <TextView
        android:id="@+id/profile_location_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_location_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_location_city_label" />

    <TextView
        android:id="@+id/profile_location_country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_location_country"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_location_state_label" />

    <TextView
        android:id="@+id/profile_location_zip_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_location_zip_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_location_country_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_location_zip_code_label" />

    <EditText
        android:id="@+id/profile_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_name_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title"
        android:autofillHints="@string/name_hint"
        android:hint="@string/name_hint"/>

    <EditText
        android:id="@+id/profile_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_email_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"/>

    <EditText
        android:id="@+id/profile_edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:inputType="date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_age_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title"
        android:autofillHints="@string/date_of_birth_hint"
        android:hint="@string/date_of_birth_hint"/>

    <EditText
        android:id="@+id/profile_edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_name_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_location"
        android:autofillHints="@string/city_hint"
        android:hint="@string/city_hint"/>

    <EditText
        android:id="@+id/profile_edit_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_location_state_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_location"
        android:autofillHints="@string/state_hint"
        android:hint="@string/state_hint"/>

    <EditText
        android:id="@+id/profile_edit_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_location_country_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_location"
        android:autofillHints="@string/country_hint"
        android:hint="@string/country_hint"/>

    <EditText
        android:id="@+id/profile_edit_zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toEndOf="@+id/profile_location_zip_code_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_location"
        android:autofillHints="@string/zip_code_hint"
        android:hint="@string/zip_code_hint"/>



</androidx.constraintlayout.widget.ConstraintLayout>