<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_name_label" />

    <TextView
        android:id="@+id/profile_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_email_label" />

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_location_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_location_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_location_address_label" />

    <TextView
        android:id="@+id/profile_location_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_location_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_location" />

    <TextView
        android:id="@+id/profile_location_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_location_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_location_city_label" />

    <TextView
        android:id="@+id/profile_location_country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_location_country"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_location_state_label" />

    <TextView
        android:id="@+id/profile_location_zip_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile_location_zip_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_location_country_label" />

    <EditText
        android:id="@+id/profile_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/name_hint"
        android:hint="@string/name_hint"
        android:text="John Dell"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_name_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <EditText
        android:id="@+id/profile_edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="95dp"
        android:autofillHints="@string/date_of_birth_hint"
        android:hint="@string/date_of_birth_hint"
        android:inputType="date"
        android:text="1988"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_age_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <EditText
        android:id="@+id/profile_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:text="johnd@myemail.com"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_email_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <EditText
        android:id="@+id/profile_edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:autofillHints="@string/city_hint"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:text="San Marcos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_location_city_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_address" />

    <EditText
        android:id="@+id/profile_edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/city_hint"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:text="710 S Loop St"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_location_address_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_location" />

    <EditText
        android:id="@+id/profile_edit_zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/zip_code_hint"
        android:hint="@string/zip_code_hint"
        android:inputType="number"
        android:text="78666"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_location_zip_code_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_country" />

    <EditText
        android:id="@+id/profile_edit_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/country_hint"
        android:hint="@string/country_hint"
        android:inputType="text"
        android:text="USA"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_location_country_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_state" />

    <EditText
        android:id="@+id/profile_edit_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/state_hint"
        android:hint="@string/state_hint"
        android:inputType="text"
        android:text="Texas"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toEndOf="@+id/profile_location_state_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_city" />

    <ImageButton
        android:id="@+id/edit_button_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/fui_transparent"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/profile_title"
        app:layout_constraintTop_toTopOf="@+id/profile_title" />

</androidx.constraintlayout.widget.ConstraintLayout>