<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.PeopleActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageView
                android:id="@+id/icon_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_folks"
                android:contentDescription="@string/logo_description" />

            <ImageView
                android:id="@+id/icon_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/information_button_description"
                tools:ignore="RtlHardcoded" />


        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabIndicatorColor="@color/colorAccent"/>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/people_viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CC000000"
        android:layout_gravity="bottom"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">

        <ImageView
            android:id="@+id/icon_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_user_folks"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/user_screen_button_description" />

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_home_folks"
            android:contentDescription="@string/home_screen_button_description" />

        <ImageView
            android:id="@+id/icon_peopleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_group_user_folks"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/people_screen_button_description" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>